fix: override the bootstrap overflow property

--- a/client/src/components/Map/map.css
+++ b/client/src/components/Map/map.css
@@ -51,6 +51,10 @@
   flex-direction: row;
 }
 
+.map-ui ul li a > svg {
+  overflow: visible;
+}
+
 .map-ui ul li .arrow path {
   fill: var(--secondary-color);
 }
